JumpScript/tests/baselines/reference/selfReferencingFile2.errors.txt
tests/cases/compiler/selfReferencingFile2.jump(1,21): error TS6053: File 'tests/cases/selfReferencingFile2.jump' not found.


==== tests/cases/compiler/selfReferencingFile2.jump (1 errors) ====
    ///<reference path='../selfReferencingFile2.jump'/>
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6053: File 'tests/cases/selfReferencingFile2.jump' not found.
    
    class selfReferencingFile2 {
    
    }